Proyecto inicial con menu

--- a/app/src/main/res/layout/fragment_registro_venta.xml
+++ b/app/src/main/res/layout/fragment_registro_venta.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.RegistroVentaActivityFragment"
-    tools:showIn="@layout/activity_registro_venta">
+    tools:context=".activities.InicioActivityFragment">
 
     <Button
         android:id="@+id/btnScanner"
