--- a/app/src/main/res/layout/content_cupos.xml
+++ b/app/src/main/res/layout/content_cupos.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment"
+    android:name="ec.gob.arch.glpmobil.activities.InicioActivityFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CuposActivity"
-    tools:showIn="@layout/activity_cupos">
-
-</android.support.constraint.ConstraintLayout>
+    tools:layout="@layout/fragment_cupos" />
