--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ec.gob.arch.glpmobil.activities.CuposActivity">
+    tools:context="ec.gob.arch.glpmobil.activities.InicioActivity">
     <item
         android:id="@+id/opcion_registrar_venta"
         android:orderInCategory="100"
