--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ACEPTAR"
-                android:onClick="ingresar"/>
+                android:onClick="irPaginaInicioPruebas"/>
 
         </TableRow>
     </TableLayout>
