--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -20,6 +20,6 @@
     <item
         android:id="@+id/opcion_actualizar_cupos"
         android:orderInCategory="100"
-        android:title="@string/opcion_actualizar_cupos"
+        android:title="Actualizar cupos"
         app:showAsAction="never" />
 </menu>
