--- a/app/src/main/res/layout/fila_venta_pendiente_enviar.xml
+++ b/app/src/main/res/layout/fila_venta_pendiente_enviar.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/textViewUsuarioVenta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fecha venta: " />
+                android:text="Usuario Venta: " />
             <TextView
                 android:id="@+id/tvUsuarioVenta"
                 android:layout_width="match_parent"
