Creación de tabla historial y cupoHogar

--- a/app/src/main/res/layout/fragment_cupos.xml
+++ b/app/src/main/res/layout/fragment_cupos.xml
@@ -13,7 +13,7 @@
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="414dp"
+        android:layout_height="660dp"
         android:scrollbars="horizontal">
 
         <LinearLayout
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <ListView
-                android:id="@+id/lvPersonas"
+                android:id="@+id/lvCupoHogar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
