--- a/app/src/main/res/layout/fila_persona_linear.xml
+++ b/app/src/main/res/layout/fila_persona_linear.xml
@@ -6,19 +6,25 @@
     android:background="@drawable/selector_filas">
 
     <TextView
-        android:id="@+id/tvParroquia"
+        android:id="@+id/tvUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Medium" />
 
     <TextView
-        android:id="@+id/tvFechaDescarga"
+        android:id="@+id/tvFechaSincroniza"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Medium"/>
 
     <TextView
-        android:id="@+id/tvNombre"
+        android:id="@+id/tvEstado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.Small"/>
+
+    <TextView
+        android:id="@+id/tvNumeroHogares"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Small"/>
