--- a/app/src/main/res/layout/fragment_cupos.xml
+++ b/app/src/main/res/layout/fragment_cupos.xml
@@ -17,7 +17,7 @@
         android:scrollbars="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
