--- a/app/src/main/res/layout/content_historial.xml
+++ b/app/src/main/res/layout/content_historial.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="ec.gob.arch.glpmobil.activities.CuposFragment"
+    android:name="ec.gob.arch.glpmobil.activities.HistorialSincronizaFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_cupos" />
+    tools:layout="@layout/fragment_historial_sincroniza" />
