--- a/app/src/main/res/layout/fila_historial_linear.xml
+++ b/app/src/main/res/layout/fila_historial_linear.xml
@@ -21,13 +21,13 @@
         android:id="@+id/tvEstado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Small"/>
+        android:textAppearance="@android:style/TextAppearance.Medium"/>
 
     <TextView
-        android:id="@+id/tvNumeroHogares"
+        android:id="@+id/tvNumeroRegistro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Small"/>
+        android:textAppearance="@android:style/TextAppearance.Medium"/>
 
 
 </ec.gob.arch.glpmobil.componentes.CheckedLinearLayout>
