--- a/app/src/main/res/layout/activity_registro_venta.xml
+++ b/app/src/main/res/layout/activity_registro_venta.xml
@@ -41,7 +41,7 @@
         android:layout_width="170dp"
         android:layout_height="95dp"
         android:text="Digitar Identificación"
-
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.964"
