--- a/app/src/main/res/layout/fragment_venta.xml
+++ b/app/src/main/res/layout/fragment_venta.xml
@@ -8,8 +8,9 @@
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="15dp">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -18,17 +19,49 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
+
                 <Button
                     android:id="@+id/btnEscanearFragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ESCANEAR"/>
+                    android:layout_width="190dp"
+                    android:layout_height="100dp"
+                    android:text="ESCANEAR"
+                    android:textAppearance="@android:style/TextAppearance.Large"/>
 
                 <Button
                     android:id="@+id/btnDigitarFragment"
+                    android:layout_width="190dp"
+                    android:layout_height="100dp"
+                    android:text="DIGITAR"
+                    android:textAppearance="@android:style/TextAppearance.Holo.Large"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp">
+
+                <TextView
+                    android:id="@+id/textView27"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DIGITAR" />
+                    android:text="Identificación:"
+                    android:textAppearance="@android:style/TextAppearance.Medium"/>
+
+                <TextView
+                    android:id="@+id/tvCodigoLeidoFragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+                <EditText
+                    android:id="@+id/etCodigoLeidoFragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="9"
+                    android:inputType="number"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
             </TableRow>
 
             <TableRow
@@ -36,35 +69,24 @@
                 android:layout_height="match_parent" >
 
                 <TextView
-                    android:id="@+id/textView27"
+                    android:id="@+id/textView28"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Identificación:" />
+                    android:text="" />
 
-                <TextView
-                    android:id="@+id/tvCodigoLeidoFragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TEXTO FRAGMENT"/>
-
-                <EditText
-                    android:id="@+id/etCodigoLeidoFragment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="Name" />
-
+                <Button
+                    android:id="@+id/btnBuscarFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="71dp"
+                    android:text="BUSCAR"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
         </TableLayout>
+
+
+
+
     </LinearLayout>
 
 
