--- a/app/src/main/res/layout/fila_historial_linear.xml
+++ b/app/src/main/res/layout/fila_historial_linear.xml
@@ -5,29 +5,73 @@
     android:orientation="vertical"
     android:background="@drawable/selector_filas">
 
-    <TextView
-        android:id="@+id/tvUsuario"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Medium" />
+        android:layout_height="match_parent">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/txtVFechaSincronizacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fecha Sincroniza: " />
+            <TextView
+                android:id="@+id/tvFechaSincroniza"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/txtVUsuario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Usuario: " />
+            <TextView
+                android:id="@+id/tvUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Medium" />
+         </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/txtVNumeroRegistros"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="N° Registros: " />
+            <TextView
+                android:id="@+id/tvNumeroRegistro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@android:style/TextAppearance.Medium"/>
+        </TableRow>
 
-    <TextView
-        android:id="@+id/tvFechaSincroniza"
+    <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Medium"/>
+        android:layout_height="match_parent" >
+        <TextView
+            android:id="@+id/txtVEstado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estado: " />
+        <TextView
+            android:id="@+id/tvEstado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.Medium"/>
+    </TableRow>
 
-    <TextView
-        android:id="@+id/tvEstado"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Medium"/>
 
-    <TextView
-        android:id="@+id/tvNumeroRegistro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Medium"/>
 
+
+
+
+
+</TableLayout>
 
 </ec.gob.arch.glpmobil.componentes.CheckedLinearLayout>
