--- a/app/src/main/res/layout/fragment_historial_sincroniza.xml
+++ b/app/src/main/res/layout/fragment_historial_sincroniza.xml
@@ -10,7 +10,8 @@
         android:id="@+id/tvTituloHistorial"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/titulo_historial" />
+        android:text="@string/titulo_historial"
+        android:textSize="16" />
 
     <Button
         android:id="@+id/btnSincronizar"
