Implementacion de la actualización de la venta en la base de datos

--- a/app/src/main/res/layout/activity_registro_venta.xml
+++ b/app/src/main/res/layout/activity_registro_venta.xml
@@ -87,6 +87,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:entries="@array/spinnerDia"
+        android:maxLength="4"
         android:prompt="@string/selection"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
